--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ title: Home
 
 <h2>Welcome</h2>
 
-<p>My name is Julian Frattini and I am a Ph.D. candidate at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technolog (BTH)</a>, Sweden under the supervision of Professor Daniel Mendez. My research interest include requirements engineering, requirements quality, and the application of empirical research methods.</p>
+<p>My name is Julian Frattini and I am a Ph.D. candidate at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technolog (BTH)</a>, Sweden, under the supervision of Professor Daniel Mendez. My research interest include requirements engineering, requirements quality, and the application of empirical research methods.</p>
