Updated thesis style

--- a/thesis.html
+++ b/thesis.html
@@ -5,10 +5,10 @@ title: Ph.D. Thesis
 
 <p>This page contains my cumulative Ph.D. thesis under the leitmotif of <b>Good-enough Requirements Engineering</b>.</p>
 
-<h3>Chapter 1: Introduction</h3>
+<h3 class="pub-title">Chapter 1: Introduction</h3>
 <p class="pub-authors">Julian Frattini</p>
 
-<h2>Part I: Theory</h2>
+<h2 class="thesis-part">Part I: Theory</h2>
 
 <div class="publication">
     <h3 class="pub-title">Chapter 2: Requirements quality research: a harmonized theory, evaluation, and roadmap</h3>
@@ -28,9 +28,9 @@ title: Ph.D. Thesis
     <p class="pub-info">Requirements Engineering Conference (2024), DOI: <a href='https://doi.org/10.1109/RE59067.2024.00047' target='_blank'>10.1109/RE59067.2024.00047</a></p>
 </div>
 
-<h2>Part II: Methodology</h2>
+<h2 class="thesis-part">Part II: Methodology</h2>
 
-<div class="publication"></div>
+<div class="publication">
     <h3 class="pub-title">Chapter 5: Requirements quality research artifacts: Recovery, analysis, and management guidelin</h3>
     <p class="pub-authors">Julian Frattini, Lloyd Montgomery, Davide Fucci, Michael Unterkalmsteiner, Daniel Mendez, Jannik Fischbach</p>
     <p class="pub-info">Journal of Systems and Software (2024), DOI: <a href='https://doi.org/10.1016/j.jss.2024.112120' target='_blank'>10.1016/j.jss.2024.112120</a></p>
@@ -48,9 +48,9 @@ title: Ph.D. Thesis
     <p class="pub-info">International Symposium on Empirical Software Engineering and Measurement (2024), DOI: <a href='https://doi.org/10.1145/3674805.3690754' target='_blank'>10.1145/3674805.3690754</a></p>
 </div>
 
-<h2>Part III: Application and Transfer</h2>
+<h2 class="thesis-part">Part III: Application and Transfer</h2>
 
-<div class="publication"></div>
+<div class="publication">
     <h3 class="pub-title">Chapter 8: Applying Bayesian Data Analysis for Causal Inference about Requirements Quality: A Controlled Experiment</h3>
     <p class="pub-authors">Julian Frattini, Davide Fucci, Richard Torkar, Lloyd Montgomery, Michael Unterkalmsteiner, Jannik Fischbach, Daniel Mendez</p>
     <p class="pub-info">Empirical Software Engineering (2024), DOI: tbd</p>
