Added full list of publications

--- a/thesis.html
+++ b/thesis.html
@@ -3,7 +3,7 @@ layout: page
 title: Ph.D. Thesis
 ---
 
-<p>This page lists all contributions to my cumulative Ph.D. thesis under the leitmotif of <b>Good-enough Requirements Engineering</b>. With the exception of the first chapter (the introduction), all chapters correspond to scientific manuscripts submitted for publication.</p>
+<p>This page lists all contributions to my cumulative Ph.D. thesis under the leitmotif of <b>Good-enough Requirements Engineering</b>. With the exception of the first chapter (the introduction), all chapters correspond to scientific manuscripts submitted for publication. A full list of my publications can be found <a href="{{ site.url }}/publications">here</a>.</p>
 
 <h3 class="pub-title">Chapter 1: Introduction</h3>
 <p class="pub-authors">Julian Frattini</p>
