Created curriculum vitae (closes #6)

--- a/cv.html
+++ b/cv.html
@@ -3,4 +3,119 @@ layout: page
 title: Curriculum Vitae
 ---
 
-<h2>Education</h2>
+<h2>
+    <i class="fa-solid fa-building-columns"></i>
+    <span>Education</span>
+</h2>
+
+<ul>
+    <li><b>Gynmasium Degree</b> with final grade 1.0 from the Hallertauer Gymnasium Wolnzach, Germany (2005-2013)</li>
+    <li><b>Bachelor Degree</b> with final grade 1.9 in Informatics, Games Engineering from the Technical University of Munich, Germany (2013-2016)</li>
+    <li><b>Master Degree</b> with final grade 1.5 in Informatics from the Technical University of Munich, Germany (2016-2019)</li>
+    <li><b>Ph.D. Degree</b> in Software Engineering from the Blekinge Institute of Technology, Sweden (2020-2025)</li>
+</ul>
+
+<h2>
+    <i class="fa-solid fa-toolbox"></i>
+    <span>Skills</span>
+</h2>
+
+<ul>
+    <li><b>Languages</b>: German (mother's tongue), English (fluent, C1), Swedish (intermediate, B2), Arabic (basic, A2), French (basic, A1)</li>
+    <li><b>Programming Languages</b>: Python, R, Java, C, C#, OCaml, JavaScript</li>
+    <li><b>Databases</b>: MongoDB, SQL</li>
+    <li><b>Data Analysis</b>: Bayesian data analysis, statistical causal inference</li>
+    <li><b>Web development</b>: HTML, CSS, Node.js, Express, Angular, React, nginx, Jekyll</li>
+    <li><b>Management Software</b>: Git, Docker, Jira, Confluence</li>
+</ul>
+
+<h2>
+    <i class="fa-solid fa-industry"></i>
+    <span>Experience</span>
+</h2>
+
+<ul>
+    <li><b>Circles and Lines</b> (Munich, Germany): Internship in animation and 3D-modeling (2013)</li>
+    <li><b>Bayerische Staatskanzlei</b> (Munich, Germany): working student in first- and second-level support for daily business (2014-2017)</li>
+    <li><b>Dynamic Software AG</b> (Munich, Germany): working student in software development on various projects as software and requirements engineer (2017-2019)</li>
+</ul>
+
+<h2>
+    <i class="fa-solid fa-book"></i>
+    <span>Research Initiatives</span>
+</h2>
+
+<ul>
+    <li><b>Good-enough Requirements Engineering (GERE)</b>: development of a theory of requirements quality, taxonomies of its constituents, and empirical evidence about the impact of quality on software development activities (2022-recent)</li>
+    <li><b>Causality in Requirements Artifacts (CiRA)</b>: empirical studies on the prevalence and perception of causal statements in requirements artifacts, development of <a href="https://github.com/JulianFrattini/cira" target="_blank">
+        <i class="fa-brands fa-github"></i>
+        <span>tool support</span>
+    </a> for automatic test case generation from causal requirements.</li>
+</ul>
+
+<p>For a more comprehensive description, check out the <a href="{{ site.url }}/initiatives">initiatives tab</a>. For a full list of publications, check out the <a href="{{ site.url }}/publications">publications tab</a>.</p>
+
+<h2>
+    <i class="fa-solid fa-award"></i>
+    <span>Awards</span>
+</h2>
+
+<p>I am honored to have received the following awards together with my co-authors:</p>
+
+<ul>
+    <li><b>Best Research Paper</b> at the 27th International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ'21)</li>
+    <li><b>Winner of the "Expanding the Frontiers of RE" Challenge</b> on the RE@Next! track of the 32nd IEEE International Requirements Engineering 2024 conference (RE'24)</li>
+</ul>
+
+<h2>
+    <i class="fa-solid fa-bell-concierge"></i>
+    <span>Service</span>
+</h2>
+
+<p>Service to the software engineering research community in the following roles.</p>
+
+<ul>
+    <li><b>Organizer</b> of 11th International Workshop on Artificial Intelligence and Requirements Engineering (AIRE'24), 8th International Workshop on Crowd-Based Requirements Engineering (CrowdRE'24)</li>
+    <li><b>Organizing Committee Member</b>: <i>publicity chair</i> of the 32nd IEEE International Requirements Engineering 2024 conference (RE'24), <i>proceedings chair</i> of the 30th International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ'24), <i>open science chair</i> of the 31st International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ'25)</li>
+    <li><b>Program Committee Member</b> in Workshop on Natural Language Processing for Requirements Engineering (NLP4RE, 2022-2024), International Conference on the Quality of Information and Communications Technology (QUATIC, 2023-2024), International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ, 2024-2025), Workshop on Multi-disciplinary, Open, and RElevant Requirements Engineering (MO2RE, 2024-2025)</li>
+    <li><b>Journal Reviewer</b> for Transactions on Software Engineering (TSE), Empirical Software Engineering (EMSE), Requirements Engineering (REJ), Journal of Systems and Software (JSS), Information and Software Technology (IST)</li>
+</ul>
+
+<h2>
+    <i class="fa-solid fa-school"></i>
+    <span>Teaching</span>
+</h2>
+
+<p>At the Blekinge Institute of Technology, I was involved in the following courses.</p>
+
+<ul>
+    <li><b>PA1463 Requirements Engineering</b> as a <i>teaching assistant</i>, helping in the development, conduction, and evaluation of exercises and exam</li>
+    <li><b>PA1417 Basic System Verification</b> as a <i>teaching assistant</i>, developing, conducting, and evaluating exercises and exams</li>
+    <li><b>PA1445 & PA2534</b> as a <i>reviewer</i> and <i>supervisor</i></li>
+</ul>
+
+<p>In scope of my activities as a teacher, I produced several resources that may be interesting to reuse, including:</p>
+
+<ul>
+    <li><b>Guest lecture on requirements engineering</b> (<a href="https://github.com/bth-dipt-teaching/req-eng-fundamentals" target="_blank">
+        <i class="fa-brands fa-github"></i>
+        <span>bth-dipt-teaching/<b>req-eng-fundamentals</b></span>
+    </a>): a concise summary of requirements engineering for software engineering students</li>
+    <li><b>Toy systems for software testing</b> (<a href="https://github.com/JulianFrattini/bsv-chef" target="_blank">
+        <i class="fa-brands fa-github"></i>
+        <span>JulianFrattini/<b>bsv-chef</b></span>
+    </a>): a toy system with seeded defects to teach the fundamentals of basic system verification</li>
+</ul>
+
+<h2>
+    <i class="fa-solid fa-cube"></i>
+    <span>Industrial Projects</span>
+</h2>
+
+<ul>
+    <li><b>Static code analysis tool substitution</b>: Comparative analysis of alternative static code analysis tools and compliance assessment with the Knorr Bremse development environment</li>
+    <li><b>Support of VDA4987 integration</b>: Integration of new UN/EDIFACT standard for electronic data interchange at SMP</li>
+    <li><b>Windows Client Manager</b>: Development of a WinSlaveManager tool utilized in continuous integration</li>
+    <li><b>CRC Plugin</b>: Development of a Jenkins plugin visualizing cyclic redundancy checksums over project boards to highlight changes</li>
+    <li><b>Requirements Process Revision</b>: Revision of the requirements engineering process via the introduction of use case templates</li>
+</ul>
