Created simple landing page (closes #5)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@ layout: page
 title: Home
 ---
 
-<h2>Welcome</h2>
+<p>My name is Julian Frattini and I am a Ph.D. candidate at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technology (BTH)</a>, Sweden, under the supervision of <a href="https://www.mendezfe.org/" target="_blank">Professor Daniel Mendez</a>. My research interest include <b>requirements engineering</b> with a main focus on <b>requirements quality</b>, and the application of <b>empirical research methods</b>.</p> 
 
-<p>My name is Julian Frattini and I am a Ph.D. candidate at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technolog (BTH)</a>, Sweden, under the supervision of Professor Daniel Mendez. My research interest include requirements engineering, requirements quality, and the application of empirical research methods.</p>
+<p>On this page, you will find some basic information about me. Particularly:</p>
+
+<ul>
+    <li><a href="{{ site.url }}/cv"><b>Curriculum vitae</b></a>: a high-level summary of my education, development, and milestones</li>
+    <li><a href="{{ site.url }}/research"><b>Research</b></a>: a summary of the research that I am engaged in</li>
+    <ul>
+        <li><a href="{{ site.url }}/initiatives"><b>Initiatives</b></a>: a guide to my research from the perspective of the overarching research programs (including curated reading lists)</li>
+        <li><a href="{{ site.url }}/thesis"><b>Ph.D. Thesis</b></a>: the set of publications that compose my dissertation</li>
+        <li><a href="{{ site.url }}/publications"><b>Publications</b></a>: a full list of publications that I was involved in</li>
+    </ul>
+</ul>
+
+<p>If you require any further information, please feel free to <a href="mailto:juf@bth.se">contact me</a>. Links to my profile on other platforms can be found at the bottom of the sidebar.</p>
