Added DOI to publication

--- a/thesis.html
+++ b/thesis.html
@@ -53,7 +53,7 @@ title: Ph.D. Thesis
 <div class="publication">
     <h3 class="pub-title">Chapter 8: Applying Bayesian Data Analysis for Causal Inference about Requirements Quality: A Controlled Experiment</h3>
     <p class="pub-authors">Julian Frattini, Davide Fucci, Richard Torkar, Lloyd Montgomery, Michael Unterkalmsteiner, Jannik Fischbach, Daniel Mendez</p>
-    <p class="pub-info">Empirical Software Engineering (2024), DOI: tbd</p>
+    <p class="pub-info">Empirical Software Engineering (2024), DOI: <a href="10.1007/s10664-024-10582-1" target="_blank">10.1007/s10664-024-10582-1</a></p>
 </div>
 
 <div class="publication">
