Minor updates on all pages

--- a/cv.html
+++ b/cv.html
@@ -75,10 +75,10 @@ title: Curriculum Vitae
 <p>Service to the software engineering research community in the following roles.</p>
 
 <ul>
-    <li><b>Organizer</b> of 11th International Workshop on Artificial Intelligence and Requirements Engineering (AIRE'24), 8th International Workshop on Crowd-Based Requirements Engineering (CrowdRE'24)</li>
+    <li><b>Program Committee Co-Chair</b> of the 11th International Workshop on Artificial Intelligence and Requirements Engineering (AIRE'24), and the 8th International Workshop on Crowd-Based Requirements Engineering (CrowdRE'24)</li>
     <li><b>Organizing Committee Member</b>: <i>publicity chair</i> of the 32nd IEEE International Requirements Engineering 2024 conference (RE'24), <i>proceedings chair</i> of the 30th International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ'24), <i>open science chair</i> of the 31st International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ'25)</li>
     <li><b>Program Committee Member</b> in Workshop on Natural Language Processing for Requirements Engineering (NLP4RE, 2022-2024), International Conference on the Quality of Information and Communications Technology (QUATIC, 2023-2024), International Working Conference on Requirement Engineering: Foundation for Software Quality (REFSQ, 2024-2025), Workshop on Multi-disciplinary, Open, and RElevant Requirements Engineering (MO2RE, 2024-2025)</li>
-    <li><b>Journal Reviewer</b> for Transactions on Software Engineering (TSE), Empirical Software Engineering (EMSE), Requirements Engineering (REJ), Journal of Systems and Software (JSS), Information and Software Technology (IST)</li>
+    <li>Invited <b>Journal Reviewer</b> for Transactions on Software Engineering (TSE), Empirical Software Engineering (EMSE), Requirements Engineering (REJ), Journal of Systems and Software (JSS), Information and Software Technology (IST)</li>
 </ul>
 
 <h2>
@@ -89,9 +89,9 @@ title: Curriculum Vitae
 <p>At the Blekinge Institute of Technology, I was involved in the following courses.</p>
 
 <ul>
-    <li><b>PA1463 Requirements Engineering</b> as a <i>teaching assistant</i>, helping in the development, conduction, and evaluation of exercises and exam</li>
-    <li><b>PA1417 Basic System Verification</b> as a <i>teaching assistant</i>, developing, conducting, and evaluating exercises and exams</li>
-    <li><b>PA1445 & PA2534</b> as a <i>reviewer</i> and <i>supervisor</i></li>
+    <li><b>Requirements Engineering</b> as a <i>teaching assistant</i>, helping in the development, conduction, and evaluation of exercises and exam</li>
+    <li><b>Basic System Verification</b> as a <i>teaching assistant</i>, developing, conducting, and evaluating exercises and exams</li>
+    <li><b>Thesis Supervision Courses</b> as a <i>reviewer</i> (on Bachelor and Master level) and <i>supervisor</i> (on Bachelor level)</li>
 </ul>
 
 <p>In scope of my activities as a teacher, I produced several resources that may be interesting to reuse, including:</p>
@@ -101,10 +101,10 @@ title: Curriculum Vitae
         <i class="fa-brands fa-github"></i>
         <span>bth-dipt-teaching/<b>req-eng-fundamentals</b></span>
     </a>): a concise summary of requirements engineering for software engineering students</li>
-    <li><b>Toy systems for software testing</b> (<a href="https://github.com/JulianFrattini/bsv-chef" target="_blank">
+    <li><b>Case systems for software testing</b> (<a href="https://github.com/JulianFrattini/bsv-chef" target="_blank">
         <i class="fa-brands fa-github"></i>
         <span>JulianFrattini/<b>bsv-chef</b></span>
-    </a>): a toy system with seeded defects to teach the fundamentals of basic system verification</li>
+    </a>): a dedicated software system with seeded defects to teach the fundamentals of basic system verification</li>
 </ul>
 
 <h2>
