--- a/thesis.html
+++ b/thesis.html
@@ -3,12 +3,31 @@ layout: page
 title: Ph.D. Thesis
 ---
 
-<p>This page lists all contributions to my cumulative Ph.D. thesis under the leitmotif of <b>Good-enough Requirements Engineering</b>. With the exception of the first chapter (the introduction), all chapters correspond to scientific manuscripts submitted for publication. A full list of my publications can be found <a href="{{ site.url }}/publications">here</a>.</p>
+<p>This page lists describes my cumulative, publication-based thesis under the leitmotif of <b>Good-enough Requirements Engineering</b> written during my Ph.D. at the Blekinge Institute of Technology, Sweden.</p>
+
+<h2>Abstract</h2>
+
+<p><b>Background</b>: High quality requirements are considered to be crucial for successful software development endeavors as their purpose is to inform subsequent software development activities like implementation or testing. Requirements quality defects have been shown to incur significant cost for remediation, even scaling up to project failure. On the other hand, effort spent to improve the quality of requirements quality needs to be justified. Organizations developing software, therefore, need to understand when their requirements artifacts are of “good enough” quality, i.e., they need to be able to identify the point between over- and underengineering.</p>
+<p><b>Problem</b>: The requirements quality research field does not yet provide organizations with the required decision support due to three shortcomings: (1) there is no sophisticated, theoretical foundation to describe requirements quality and that would serve as a basis to coordinate distributed research effort and the synthesis of evidence, (2) the scientific practice currently applied in the field threatens the validity of contributions, and (3) the field lacks empirical evidence that can be aggregated to form a holistic view on requirements quality. Consequently, organizations are hesitant to adopt requirements quality research results.</p>
+<p><b>Goal</b>: In this cumulative, publication-based thesis, we address these three shortcomings and aim to contribute to a more evidence-based approach to requirements quality research that is grounded on scientific theory.</p>
+<p><b>Method</b>: First, we develop a theoretical and ontological foundation by adopting and integrating existing software engineering theories. Secondly, we evaluate the current state of the art of open science and data analysis in the field, and provide guidelines to improve these practices. Thirdly, we demonstrate the application of these guidelines and conduct a controlled experiment to contribute additional empirical evidence to the field.</p>
+<p><b>Results</b>: The resulting set of analytical theories specifies requirements quality and structures future empirical contributions. Our evaluation of the state of the art shows both the need for a common, theoretical foundation as well as support for applying rigorous research practices. Our empirical studies contribute to these needs and illustrate the complexity of the impact that requirements quality defects have on subsequent activities. Finally, we contribute a method for the effective aggregation of empirical results.</p>
+<p><b>Conclusion</b>: Our theoretical, methodological, and empirical contributions help to coordinate a productive and constructive research agenda on requirements quality that is based on evidence and grounded in theory. This allows for rigorous and relevant research that ultimately informs organizations on how to identify whether their requirements are good enough.</p>
+
+<p><b>Keywords</b>: Requirements Engineering, Requirements Artifacts, Requirements Quality</p>
+
+<h2>Chapters</h2>
+
+<p>This section lists all contributions to my thesis under. With the exception of the first chapter (the introduction), all chapters correspond to scientific manuscripts submitted for publication. A full list of my publications can be found <a href="{{ site.url }}/publications">here</a>. In case of difficulties accessing the publications, please contact me directly.</p>
+
+<p>The following graph visualizes the identified gaps, the corresponding goals, and the produced contributions (where each contribution is described in one chapter, i.e., one separate publication).</p>
+
+<img src="{{ site.url }}/public/img/thesis-overview.png"></img>
 
 <h3 class="pub-title">Chapter 1: Introduction</h3>
 <p class="pub-authors">Julian Frattini</p>
 
-<h2 class="thesis-part">Part I: Theory</h2>
+<h3 class="thesis-part">Part I: Theory</h2>
 
 <div class="publication">
     <h3 class="pub-title">Chapter 2: Requirements quality research: a harmonized theory, evaluation, and roadmap</h3>
@@ -28,7 +47,7 @@ title: Ph.D. Thesis
     <p class="pub-info">Requirements Engineering Conference (2024), DOI: <a href='https://doi.org/10.1109/RE59067.2024.00047' target='_blank'>10.1109/RE59067.2024.00047</a></p>
 </div>
 
-<h2 class="thesis-part">Part II: Methodology</h2>
+<h3 class="thesis-part">Part II: Methodology</h2>
 
 <div class="publication">
     <h3 class="pub-title">Chapter 5: Requirements quality research artifacts: Recovery, analysis, and management guidelin</h3>
@@ -48,7 +67,7 @@ title: Ph.D. Thesis
     <p class="pub-info">International Symposium on Empirical Software Engineering and Measurement (2024), DOI: <a href='https://doi.org/10.1145/3674805.3690754' target='_blank'>10.1145/3674805.3690754</a></p>
 </div>
 
-<h2 class="thesis-part">Part III: Application and Transfer</h2>
+<h3 class="thesis-part">Part III: Application and Transfer</h2>
 
 <div class="publication">
     <h3 class="pub-title">Chapter 8: Applying Bayesian Data Analysis for Causal Inference about Requirements Quality: A Controlled Experiment</h3>
@@ -58,6 +77,6 @@ title: Ph.D. Thesis
 
 <div class="publication">
     <h3 class="pub-title">Chapter 9: Managing Variance Theories in Software Engineering</h3>
-    <p class="pub-authors">Julian Frattini, Michael Unterkalmsteiner, Daniel Mendez</p>
+    <p class="pub-authors">Julian Frattini, Daniel Mendez, Jannik Fischbach, Davide Fucci, Michael Unterkalmsteiner</p>
     <p class="pub-info">Submitted to Transactions on Software Engineering, DOI: tbd</p>
 </div>
