--- a/initiatives.html
+++ b/initiatives.html
@@ -53,6 +53,16 @@ title: Research Initiatives
 
 <p>The initiative produced several additional <a href="{{ site.url }}/publications">publications</a> as well as a fully interactive <a href="http://www.cira.bth.se/demo" target="_blank">online demonstration</a>.</p>
 
+<h2>Open Science</h2>
+
+<p>I subscribe to the open science principles and strife to make all of my research accessible and reusable. In the scope of this endeavor, my colleagues and I also try to support the software engineering research community with guidelines on how to improve adherence to open science principles.</p>
+
+<ol class="pub-list">
+    <li><b>Frattini, J.</b>, Montgomery, L., Fucci, D., Unterkalmsteiner, M., Mendez, D., & Fischbach, J. (2024). Requirements quality research artifacts: Recovery, analysis, and management guideline. Journal of Systems and Software. DOI: <a href="https://doi.org/10.1016/j.jss.2024.112120" target="_blank">10.1016/j.jss.2024.112120</a>.</li>
+</ol> 
+
+<p>The <a href="https://zenodo.org/records/11963222" target="_blank">Open Science Artefact Management Guideline</a> summarizes our concise recommendations on how to collect, document, licence, archive, and share research artifacts.</p>
+
 <h2>Software Engineering Research Methodology</h2>
 
 <p>I have recently developed an interest in methods for empirical methods and data analysis in software engineering research. Particularly, I am interested in proper statistical causal inference using structural causal modeling, directed acyclic graphs, and Bayesian data analysis. An initial set of publications is composed of the following, but is planned to grow in the near future.</p>
