Added preliminary version of the Kappa to the thesis

--- a/thesis.html
+++ b/thesis.html
@@ -24,8 +24,16 @@ title: Ph.D. Thesis
 
 <img src="{{ site.url }}/public/img/thesis-overview.png"></img>
 
-<h3 class="pub-title">Chapter 1: Introduction</h3>
-<p class="pub-authors">Julian Frattini</p>
+<div class="publication">
+    <h3 class="pub-title">Chapter 1: Introduction</h3>
+    <p class="pub-authors">Julian Frattini</p>
+    <p class="pub-info">Preliminary version: 
+        <a href='{{site.url}}/public/docs/dissertation-frattini-kappa.pdf' download>
+            <i class="fa-solid fa-file"></i>
+            <span>Download PDF</span>
+        </a>
+    </p>
+</div>
 
 <h3 class="thesis-part">Part I: Theory</h2>
 
@@ -78,5 +86,5 @@ title: Ph.D. Thesis
 <div class="publication">
     <h3 class="pub-title">Chapter 9: Managing Variance Theories in Software Engineering</h3>
     <p class="pub-authors">Julian Frattini, Daniel Mendez, Jannik Fischbach, Davide Fucci, Michael Unterkalmsteiner</p>
-    <p class="pub-info">Submitted to Transactions on Software Engineering, DOI: tbd</p>
+    <p class="pub-info">To be submitted to Transactions on Software Engineering, DOI: tbd</p>
 </div>
