--- a/initiatives.html
+++ b/initiatives.html
@@ -9,6 +9,8 @@ title: Research Initiatives
 
 <p><i>Good-enough requirements engineering</i> was the leitmotif during my <a href="{{ site.url }}/thesis">doctoral studies</a>. This initiative aims to provide software engineering pracitioners with decision support to answer the question "Are my requirements good enough?" In the scope of this initiative, we developed a theoretical foundation - the activity-based requirements quality theory (RQT) - and started contributing empirical evidence to the theory. Our goal is to collect evidence about the impact of requirements quality factors (e.g., the use of passive voice) on subsequent activities (e.g., implementing or testing).</p>
 
+<img src="{{site.url}}/public/img/rqt.png" alt="core concepts of the activity-based requirements quality theory"></img>
+
 <h3>Reading List</h3>
 
 <p>If interested in this initiative, I recommend starting to read related work about artifact quality. We drew heavy inspiration from the fantastic work of Dr. Florian Deissenboeck on source code maintainability and Dr. Henning Femmer, who translated this work into the domain of requirements engineering.</p>
