Minor annotations to the thesis page

--- a/thesis.html
+++ b/thesis.html
@@ -18,11 +18,13 @@ title: Ph.D. Thesis
 
 <h2>Chapters</h2>
 
-<p>This section lists all contributions to my thesis under. With the exception of the first chapter (the introduction), all chapters correspond to scientific manuscripts submitted for publication. A full list of my publications can be found <a href="{{ site.url }}/publications">here</a>. In case of difficulties accessing the publications, please contact me directly.</p>
+<p>This section lists all contributions to my thesis. With the exception of the first chapter (the introduction), all chapters correspond to scientific manuscripts submitted for publication. A full list of my publications can be found <a href="{{ site.url }}/publications">here</a>. In case of difficulties accessing the publications, please contact me directly.</p>
 
 <p>The following graph visualizes the identified gaps, the corresponding goals, and the produced contributions (where each contribution is described in one chapter, i.e., one separate publication).</p>
 
 <img src="{{ site.url }}/public/img/thesis-overview.png"></img>
+
+<p>The full thesis document will be made available here soon.</p>
 
 <div class="publication">
     <h3 class="pub-title">Chapter 1: Introduction</h3>
@@ -80,11 +82,11 @@ title: Ph.D. Thesis
 <div class="publication">
     <h3 class="pub-title">Chapter 8: Applying Bayesian Data Analysis for Causal Inference about Requirements Quality: A Controlled Experiment</h3>
     <p class="pub-authors">Julian Frattini, Davide Fucci, Richard Torkar, Lloyd Montgomery, Michael Unterkalmsteiner, Jannik Fischbach, Daniel Mendez</p>
-    <p class="pub-info">Empirical Software Engineering (2024), DOI: <a href="10.1007/s10664-024-10582-1" target="_blank">10.1007/s10664-024-10582-1</a></p>
+    <p class="pub-info">Empirical Software Engineering (2024), DOI: <a href="10.1007/s10664-024-10582-1" target="_blank">10.1007/s10664-024-10582-1</a> (available soon, preprint: <a href="https://arxiv.org/abs/2401.01154" target="_blank">arxiv/2401.01154</a>)</p>
 </div>
 
 <div class="publication">
     <h3 class="pub-title">Chapter 9: Managing Variance Theories in Software Engineering</h3>
     <p class="pub-authors">Julian Frattini, Daniel Mendez, Jannik Fischbach, Davide Fucci, Michael Unterkalmsteiner</p>
-    <p class="pub-info">To be submitted to Transactions on Software Engineering, DOI: tbd</p>
+    <p class="pub-info">To be submitted to Transactions on Software Engineering. The manuscript will be made available here soon.</p>
 </div>
