Updated final chapter of the thesis

--- a/thesis.html
+++ b/thesis.html
@@ -86,7 +86,7 @@ title: Ph.D. Thesis
 </div>
 
 <div class="publication">
-    <h3 class="pub-title">Chapter 9: Managing Variance Theories in Software Engineering</h3>
-    <p class="pub-authors">Julian Frattini, Daniel Mendez, Jannik Fischbach, Davide Fucci, Michael Unterkalmsteiner</p>
-    <p class="pub-info">To be submitted to Transactions on Software Engineering. The manuscript will be made available here soon.</p>
+    <h3 class="pub-title">Chapter 9: Replications, Revisions, and Reanalyses: Managing Variance Theories in Software Engineering</h3>
+    <p class="pub-authors">Julian Frattini, Jannik Fischbach, Davide Fucci, Michael Unterkalmsteiner, Daniel Mendez</p>
+    <p class="pub-info">Submitted to Transactions on Software Engineering. Pre-print available at <a href="https://arxiv.org/abs/2412.12634" target="_blank">arXiv:2412.12634</a>.</p>
 </div>
