Updated thesis files

--- a/thesis.html
+++ b/thesis.html
@@ -3,24 +3,22 @@ layout: page
 title: Ph.D. Thesis
 ---
 
-<p>This page lists describes my cumulative, publication-based thesis under the leitmotif of <b>Good-enough Requirements Engineering</b> written during my Ph.D. at the Blekinge Institute of Technology, Sweden.</p>
+<p>My cumulative, publication-based doctoral thesis revolved around the leitmotif of <b>Good-enough Requirements Engineering</b>. The official version is <a href="https://urn.kb.se/resolve?urn=urn:nbn:se:bth-27382" target="_blank">openly accessible on DiVA</a> and can be downloaded <a href='{{site.url}}/public/docs/dissertation-frattini.pdf' download><i class="fa-solid fa-file"></i> <span>here</span></a>.</p>
 
 <h2>Abstract</h2>
 
-<p><b>Background</b>: High quality requirements are considered to be crucial for successful software development endeavors as their purpose is to inform subsequent activities like implementation or testing. Requirements quality defects have been shown to incur significant cost for remediation, even scaling up to project failure. At the same time, effort spent to improve the quality of requirements quality needs to be justified. Organizations developing software, therefore, need to understand when their requirements artifacts are of "good enough" quality, i.e., they need to be able to identify the optimum between over- and underengineering.</p>
-<p><b>Problem</b>: The body of knowledge in requirements quality does not yet offer solutions that would allow organizations to identify that optimum due to three shortcomings: (1) there is no sophisticated, theoretical foundation to describe requirements quality and serve as a basis to coordinate distributed research effort and the synthesis of evidence in the field, (2) the scientific practice currently applied in the field is of limited rigor to draw reliable conclusions from existing empirical contributions, and (3) the field lacks empirical evidence that can be aggregated to form a holistic view on requirements quality. This renders the adoption of requirements quality research by organizations cumbersome.</p>
-<p><b>Goal</b>: In this cumulative, publication-based thesis, we address these three shortcomings and aim to contribute to a more evidence-based approach to requirements quality research that is grounded on scientific theory.</p>
-<p><b>Method</b>: First, we develop a theoretical and ontological foundation by adopting and integrating existing software engineering theories. Second, we evaluate the state of the art of data analysis and open science in the field, and provide guidelines to improve these practices. Third, we demonstrate the application of these guidelines and conduct a controlled experiment to contribute additional empirical evidence to the field.</p>
-<p><b>Results</b>: The resulting set of analytical theories specifies requirements quality and provides structure for future empirical contributions. Our evaluation of the state of the art shows both the need for a common theoretical foundation as well as support for applying rigorous research practices. Our empirical studies contribute to these needs and illustrate the complexity of the impact that requirements quality defects have on subsequent activities. Finally, we develop a method for the effective aggregation of empirical results.</p>
+<p><b>Background</b>: High-quality requirements are considered crucial for successful software development endeavors as the requirements' purpose is to inform subsequent activities like implementation or testing. Requirements quality defects have been shown to incur significant costs for remediation, scaling up even to project failure. At the same time, the effort to improve the quality of requirements must be justified. Organizations developing software, therefore, need to understand when their requirements artifacts are of ``good enough'' quality, i.e., they need to be able to identify the optimum between over- and under-engineering.</p>
+<p><b>Problem</b>: The body of knowledge in requirements quality does not yet offer solutions that would allow organizations to identify that optimum due to three shortcomings: (1) there is no generally accepted, theoretical foundation to describe requirements quality that can serve as a basis to coordinate distributed research efforts and the synthesis of evidence in the field, (2) the scientific practice currently applied in the field is of limited rigor to draw reliable conclusions from existing empirical contributions, and (3) the field lacks empirical evidence that can be aggregated to form a holistic view of requirements quality. These are potential causes for the lack of adoption of requirements quality research in practice.</p>
+<p><b>Goal</b>: In this cumulative, publication-based thesis, we address these three shortcomings and aim to contribute to a more evidence-based approach to requirements quality research grounded in scientific theory.</p>
+<p><b>Method</b>: First, we develop a theoretical foundation by adopting and integrating existing software engineering theories. Second, we evaluate the state of the art of data analysis and open science in the field and provide guidelines to improve these practices. Third, we demonstrate the application of these guidelines and conduct a controlled experiment to contribute additional empirical evidence to the field.</p>
+<p><b>Results</b>: The resulting set of analytical theories specifies requirements quality and provides a structure for future empirical contributions. Our evaluation of the state of the art shows both the need for a common theoretical foundation as well as support for applying rigorous research practices. Our empirical studies contribute to these needs and illustrate the complexity of the impact that requirements quality defects have on subsequent activities. Finally, we develop a method for the effective aggregation of empirical results.</p>
 <p><b>Conclusion</b>: Our theoretical, methodological, and empirical contributions help to coordinate a productive and constructive research agenda on requirements quality that is based on evidence and grounded in theory. This allows for rigorous and practically relevant research that ultimately informs organizations on how to engineer good-enough requirements.</p>
 
 <p><b>Keywords</b>: Requirements Engineering, Requirements Artifacts, Requirements Quality</p>
 
 <h2>Chapters</h2>
 
-<p>This section lists all contributions to my thesis. With the exception of the first chapter (the introduction), all chapters correspond to scientific manuscripts submitted for publication. A full list of my publications can be found <a href="{{ site.url }}/publications">here</a>. In case of difficulties accessing the publications, please contact me directly.</p>
-
-<p>The following graph visualizes the identified gaps, the corresponding goals, and the produced contributions (where each contribution is described in one chapter, i.e., one separate publication).</p>
+<p>This section lists all contributions that compose my thesis. With the exception of the first chapter (the introduction), each chapter consists of a scientific manuscript submitted for publication at a peer-reviewed venue. The following graph shows how the contributions (i.e., chapters, on the right) are motivated by goals (in the middle) which we derived from identified gaps (on the left).</p>
 
 <img src="{{ site.url }}/public/img/thesis-overview.png"></img>
 
@@ -29,7 +27,7 @@ title: Ph.D. Thesis
 <div class="publication">
     <h3 class="pub-title">Chapter 1: Introduction</h3>
     <p class="pub-authors">Julian Frattini</p>
-    <p class="pub-info">Preliminary version: 
+    <p class="pub-info">
         <a href='{{site.url}}/public/docs/dissertation-frattini-kappa.pdf' download>
             <i class="fa-solid fa-file"></i>
             <span>Download PDF</span>
@@ -90,3 +88,5 @@ title: Ph.D. Thesis
     <p class="pub-authors">Julian Frattini, Jannik Fischbach, Davide Fucci, Michael Unterkalmsteiner, Daniel Mendez</p>
     <p class="pub-info">Submitted to Transactions on Software Engineering. Pre-print available at <a href="https://arxiv.org/abs/2412.12634" target="_blank">arXiv:2412.12634</a>.</p>
 </div>
+
+<p>The full list of my publications can be found <a href="{{ site.url }}/publications">here</a>. In case of difficulties accessing the publications, please contact me directly.</p>
