--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Home
 ---
 
-<p>My name is Julian Frattini and I am a Ph.D. candidate at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technology (BTH)</a>, Sweden, under the supervision of <a href="https://www.mendezfe.org/" target="_blank">Professor Daniel Mendez</a>. My research interest include <b>requirements engineering</b> with a main focus on <b>requirements quality</b>, and the application of <b>empirical research methods</b>.</p> 
+<p>My name is Julian Frattini and I am ab Universitetsadjunkt at the <a href="https://www.bth.se/eng/" target="_blank">Blekinge Institute of Technology (BTH)</a>, Sweden. I recently completed my Ph.D. studies under the supervision of <a href="https://www.mendezfe.org/" target="_blank">Professor Daniel Mendez</a>. My research interest include <b>requirements engineering</b> with a main focus on <b>requirements quality</b>, and the application of <b>empirical research methods</b>.</p> 
 
 <p>On this page, you will find some basic information about me. Particularly:</p>
 
