--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,7 @@ title: Publications
 <h2>Books and Chapters</h2>
 
 <ol class="pub-list">
-    <li><b>Frattini, J.</b>, Unterkalmsteiner, M., Fucci, D., & Mendez, D. (2024). 13. NLP4RE Tools: Classification, Overview, and Management. <i>To appear in</i> Handbook of Natural Language Processing for Requirements Engineering. Cham: Springer International Publishing. Pre-print: <a href="https://arxiv.org/abs/2403.06685" target="_blank">arXiv:2403.06685</a>.</li>
+    <li><b>Frattini, J.</b>, Unterkalmsteiner, M., Fucci, D., & Mendez, D. (2024). 13. NLP4RE Tools: Classification, Overview, and Management. <i>To appear in</i> Handbook of Natural Language Processing for Requirements Engineering. Cham: Springer International Publishing. DOI: <a href="https://doi.org/10.1007/978-3-031-73143-3_13" target="_blank">10.1007/978-3-031-73143-3_13</a>.</li>
 </ol>
 
 <h2>Conference Publications</h2>
